Poprawienie Confusion Matrix

--- a/Przygotowanie_do_rozmowy.ipynb
+++ b/Przygotowanie_do_rozmowy.ipynb
@@ -1376,7 +1376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Z tego co widzę wychodzi to całkiem dobrze fałszywych pozytywnych jest 378 co wypadałoby tutaj poprawić, lecz gorsza sytuacja byłaby gdyby więcej było fałszywych zer co oznaczałoby, że model nie wyłapuje kiedy ktoś nie spłaci kredytu."
+    "Z tego co widzę wychodzi całkiem dobrze, trzeba popracować w przyszłości na tym aby model był bardziej wrażliwy na nie spłacenie kredytu ponieważ fałszywe zera są moim zdaniem bardziej krzywdzące niż fałszywe jedynki."
    ]
   },
   {
